--- a/page/style/style.css
+++ b/page/style/style.css
@@ -51,6 +51,7 @@ nav{
     border-radius: 25px;
     padding : 4px;
     width: 150px;
+    align-items: center;
 }
 
 .serchbar input{
@@ -59,7 +60,7 @@ nav{
     background: none;
     height: 10px;
     color: aliceblue;
-    margin-right: 30px;
+    margin-left: 10px;
     width: 100px;
 }
 
@@ -67,7 +68,6 @@ nav{
     padding: 0;
     margin : 0;
     color:#5c5e81 ;
-    
 }
 
 .masuk{
@@ -322,7 +322,7 @@ footer{
         background: none;
         height: 30px;
         color: aliceblue;
-        margin-right: 400px;
+        margin-right: 450px;
     }
 
     .serchbar a{
